@@ -62,6 +62,7 @@
 - NEW: When moving/copying a file over an existing file, ask the user whether
        to replace that existing file. (Stefan)
 - NEW: Shift-click feature for merge tools. See issue #430 for details. (Stefan)
+- NEW: "Create patch" available from commit/CfM dialog. (Stefan)
 - CHG: The bug-ID column width in the log dialog is now limited 
        to 200 pixels. (Stefan)
 - CHG: The right-drag context menu now only shows "Export" if a versioned
